// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Parser properties of type  Limited Concept  1`] = `
LimitedTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": [Circular],
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
    "name": "",
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "lim",
  "$id": "ID-5",
  "$typename": "LimitedTest",
  "_PI_limitedNonOpt": LimitedNonOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedNonOpt",
    "$id": "ID-2",
    "$typename": "LimitedNonOptional",
    "_PI_other": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "other",
      "_PI_pathname": Array [
        "FIRST",
      ],
      "_PI_referred": OtherLimited {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-4",
        "$typename": "OtherLimited",
        "name": "FIRST",
      },
      "typeName": "OtherLimited",
    },
    "_PI_otherMulti": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "FIRST",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-4",
          "$typename": "OtherLimited",
          "name": "FIRST",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "FIRST",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-4",
          "$typename": "OtherLimited",
          "name": "FIRST",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 4,
        "$$propertyName": "otherMulti",
        "_PI_pathname": Array [
          "SECOND",
        ],
        "_PI_referred": OtherLimited {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-5",
          "$typename": "OtherLimited",
          "name": "SECOND",
        },
        "typeName": "OtherLimited",
      },
    ],
    "_PI_visMulti": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visMultiWithExtra": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "name": "-",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "name": "-",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visWithExtra": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visWithExtra",
      "_PI_pathname": Array [
        "-",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-2",
        "$typename": "VisibilityKind",
        "name": "-",
      },
      "typeName": "VisibilityKind",
    },
    "_PI_visibility": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visibility",
      "_PI_pathname": Array [
        "+",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-1",
        "$typename": "VisibilityKind",
        "name": "+",
      },
      "typeName": "VisibilityKind",
    },
  },
  "_PI_limitedOpt": LimitedOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedOpt",
    "$id": "ID-3",
    "$typename": "LimitedOptional",
    "_PI_visMulti": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMulti",
        "_PI_pathname": Array [
          "#",
        ],
        "_PI_referred": null,
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visMultiWithExtra": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "name": "-",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "name": "-",
        },
        "typeName": "VisibilityKind",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "visMultiWithExtra",
        "_PI_pathname": Array [
          "-",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-2",
          "$typename": "VisibilityKind",
          "name": "-",
        },
        "typeName": "VisibilityKind",
      },
    ],
    "_PI_visWithExtra": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visWithExtra",
      "_PI_pathname": Array [
        "-",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-2",
        "$typename": "VisibilityKind",
        "name": "-",
      },
      "typeName": "VisibilityKind",
    },
    "_PI_visibility": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "visibility",
      "_PI_pathname": Array [
        "+",
      ],
      "_PI_referred": VisibilityKind {
        "$$owner": null,
        "$$propertyIndex": undefined,
        "$$propertyName": "",
        "$id": "ID-1",
        "$typename": "VisibilityKind",
        "name": "+",
      },
      "typeName": "VisibilityKind",
    },
  },
  "_PI_limitedOpt2": LimitedOptional {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "limitedOpt2",
    "$id": "ID-4",
    "$typename": "LimitedOptional",
  },
  "name": "anyNameWillDo",
}
`;

exports[`Parser properties of type  Part  1`] = `
PartsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": [Circular],
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
    "name": "",
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "parts",
  "$id": "ID-7",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-6",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-2",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "content": "stringLiteral",
      "optContent": 10,
    },
    "_PI_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-3",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "content": "otherString",
        "optContent": 0,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralXXX",
        "optContent": 123,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralYYY",
        "optContent": 0,
      },
    ],
  },
  "_PI_partsOfParts": null,
  "name": "myName",
}
`;

exports[`Parser properties of type  Part and Sub Parts  1`] = `
PartsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": [Circular],
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
    "name": "",
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "parts",
  "$id": "ID-39",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-6",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-2",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "content": "stringLiteral",
      "optContent": 10,
    },
    "_PI_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-3",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "content": "otherString",
        "optContent": 0,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralXXX",
        "optContent": 123,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralYYY",
        "optContent": 0,
      },
    ],
  },
  "_PI_partsOfParts": WithSubSubParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "partsOfParts",
    "$id": "ID-38",
    "$typename": "WithSubSubParts",
    "_PI_optList": Array [],
    "_PI_optPart": null,
    "_PI_part": SubConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-15",
      "$typename": "SubConcept",
      "_PI_listSub": Array [
        WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "listSub",
          "$id": "ID-11",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-9",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteralFGT",
            "optContent": 10,
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-10",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "content": "otherStringZZZ",
              "optContent": 0,
            },
          ],
        },
        WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "listSub",
          "$id": "ID-14",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-12",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "-",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-2",
                "$typename": "VisibilityKind",
                "name": "-",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteralZZZ",
            "optContent": 1045,
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-13",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "content": "otherString",
              "optContent": 0,
            },
          ],
        },
      ],
      "_PI_normalSub": WithDirectParts {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "normalSub",
        "$id": "ID-8",
        "$typename": "WithDirectParts",
        "_PI_optList": Array [],
        "_PI_optPart": null,
        "_PI_part": PartConcept {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "part",
          "$id": "ID-7",
          "$typename": "PartConcept",
          "_PI_visibility": PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "visibility",
            "_PI_pathname": Array [
              "+",
            ],
            "_PI_referred": VisibilityKind {
              "$$owner": null,
              "$$propertyIndex": undefined,
              "$$propertyName": "",
              "$id": "ID-1",
              "$typename": "VisibilityKind",
              "name": "+",
            },
            "typeName": "VisibilityKind",
          },
          "content": "stringLiteral",
          "optContent": 10,
        },
        "_PI_partList": Array [],
      },
      "_PI_optListSub": Array [],
      "_PI_optionalSub": null,
    },
    "_PI_partList": Array [
      SubConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-28",
        "$typename": "SubConcept",
        "_PI_listSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "listSub",
            "$id": "ID-27",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-26",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteral",
              "optContent": 10,
            },
            "_PI_partList": Array [],
          },
        ],
        "_PI_normalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "normalSub",
          "$id": "ID-20",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-16",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteral",
            "optContent": 10,
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-17",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "content": "otherString",
              "optContent": 0,
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 1,
              "$$propertyName": "partList",
              "$id": "ID-18",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "-",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-2",
                  "$typename": "VisibilityKind",
                  "name": "-",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteralXXX",
              "optContent": 123,
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 2,
              "$$propertyName": "partList",
              "$id": "ID-19",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteralYYY",
              "optContent": 0,
            },
          ],
        },
        "_PI_optListSub": Array [],
        "_PI_optionalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optionalSub",
          "$id": "ID-25",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-21",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteral",
            "optContent": 10,
          },
          "_PI_partList": Array [
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 0,
              "$$propertyName": "partList",
              "$id": "ID-22",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "#",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-3",
                  "$typename": "VisibilityKind",
                  "name": "#",
                },
                "typeName": "VisibilityKind",
              },
              "content": "otherString",
              "optContent": 0,
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 1,
              "$$propertyName": "partList",
              "$id": "ID-23",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "-",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-2",
                  "$typename": "VisibilityKind",
                  "name": "-",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteralXXX",
              "optContent": 123,
            },
            PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": 2,
              "$$propertyName": "partList",
              "$id": "ID-24",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteralYYY",
              "optContent": 0,
            },
          ],
        },
      },
      SubConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-37",
        "$typename": "SubConcept",
        "_PI_listSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "listSub",
            "$id": "ID-34",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-33",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLiteral",
              "optContent": 10,
            },
            "_PI_partList": Array [],
          },
        ],
        "_PI_normalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "normalSub",
          "$id": "ID-30",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-29",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "+",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-1",
                "$typename": "VisibilityKind",
                "name": "+",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteral",
            "optContent": 10,
          },
          "_PI_partList": Array [],
        },
        "_PI_optListSub": Array [
          WithDirectParts {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optListSub",
            "$id": "ID-36",
            "$typename": "WithDirectParts",
            "_PI_optList": Array [],
            "_PI_optPart": null,
            "_PI_part": PartConcept {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "part",
              "$id": "ID-35",
              "$typename": "PartConcept",
              "_PI_visibility": PiElementReference {
                "$$owner": [Circular],
                "$$propertyIndex": undefined,
                "$$propertyName": "visibility",
                "_PI_pathname": Array [
                  "+",
                ],
                "_PI_referred": VisibilityKind {
                  "$$owner": null,
                  "$$propertyIndex": undefined,
                  "$$propertyName": "",
                  "$id": "ID-1",
                  "$typename": "VisibilityKind",
                  "name": "+",
                },
                "typeName": "VisibilityKind",
              },
              "content": "stringLit",
              "optContent": 1440,
            },
            "_PI_partList": Array [],
          },
        ],
        "_PI_optionalSub": WithDirectParts {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optionalSub",
          "$id": "ID-32",
          "$typename": "WithDirectParts",
          "_PI_optList": Array [],
          "_PI_optPart": null,
          "_PI_part": PartConcept {
            "$$owner": [Circular],
            "$$propertyIndex": undefined,
            "$$propertyName": "part",
            "$id": "ID-31",
            "$typename": "PartConcept",
            "_PI_visibility": PiElementReference {
              "$$owner": [Circular],
              "$$propertyIndex": undefined,
              "$$propertyName": "visibility",
              "_PI_pathname": Array [
                "#",
              ],
              "_PI_referred": VisibilityKind {
                "$$owner": null,
                "$$propertyIndex": undefined,
                "$$propertyName": "",
                "$id": "ID-3",
                "$typename": "VisibilityKind",
                "name": "#",
              },
              "typeName": "VisibilityKind",
            },
            "content": "stringLiteral",
            "optContent": 10,
          },
          "_PI_partList": Array [],
        },
      },
    ],
  },
  "name": "myName",
}
`;

exports[`Parser properties of type  Part with Optionals present 1`] = `
PartsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": [Circular],
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": null,
    "name": "",
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "parts",
  "$id": "ID-10",
  "$typename": "PartsTest",
  "_PI_directParts": WithDirectParts {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directParts",
    "$id": "ID-9",
    "$typename": "WithDirectParts",
    "_PI_optList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-7",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteral",
        "optContent": 10,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-8",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralYYY",
        "optContent": 0,
      },
    ],
    "_PI_optPart": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optPart",
      "$id": "ID-3",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "content": "stringLiteral",
      "optContent": 10,
    },
    "_PI_part": PartConcept {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-2",
      "$typename": "PartConcept",
      "_PI_visibility": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "visibility",
        "_PI_pathname": Array [
          "+",
        ],
        "_PI_referred": VisibilityKind {
          "$$owner": null,
          "$$propertyIndex": undefined,
          "$$propertyName": "",
          "$id": "ID-1",
          "$typename": "VisibilityKind",
          "name": "+",
        },
        "typeName": "VisibilityKind",
      },
      "content": "stringLiteral",
      "optContent": 10,
    },
    "_PI_partList": Array [
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "#",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-3",
            "$typename": "VisibilityKind",
            "name": "#",
          },
          "typeName": "VisibilityKind",
        },
        "content": "otherString",
        "optContent": 0,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "-",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-2",
            "$typename": "VisibilityKind",
            "name": "-",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralXXX",
        "optContent": 123,
      },
      PartConcept {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "partList",
        "$id": "ID-6",
        "$typename": "PartConcept",
        "_PI_visibility": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "visibility",
          "_PI_pathname": Array [
            "+",
          ],
          "_PI_referred": VisibilityKind {
            "$$owner": null,
            "$$propertyIndex": undefined,
            "$$propertyName": "",
            "$id": "ID-1",
            "$typename": "VisibilityKind",
            "name": "+",
          },
          "typeName": "VisibilityKind",
        },
        "content": "stringLiteralYYY",
        "optContent": 0,
      },
    ],
  },
  "_PI_partsOfParts": null,
  "name": "myName",
}
`;

exports[`Parser properties of type  Primitive  1`] = `
PrimitivesTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": [Circular],
    "_PI_primWith": null,
    "_PI_ref": null,
    "name": "",
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "prim",
  "$id": "ID-8",
  "$typename": "PrimitivesTest",
  "_PI_prim": Prim {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "prim",
    "$id": "ID-2",
    "$typename": "Prim",
    "primBoolean": true,
    "primIdentifier": "EenNaam",
    "primListBoolean": Array [
      true,
      false,
      true,
      false,
    ],
    "primListIdentifier": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "primListNumber": Array [
      10,
      20,
    ],
    "primListString": Array [
      "TEKST",
      "TEKST",
    ],
    "primNumber": 19,
    "primString": "TEKST",
  },
  "_PI_primExtra": PrimsWithExtraText {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "primExtra",
    "$id": "ID-3",
    "$typename": "PrimsWithExtraText",
    "primBooleanWithExtra": false,
    "primIdentifierWithExtra": "EenNaam",
    "primListBooleanWithExtra": Array [
      false,
      true,
      false,
    ],
    "primListIdentifierWithExtra": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "primListNumberWithExtra": Array [
      67,
      98,
    ],
    "primListStringWithExtra": Array [
      "TEKST",
      "TEXT",
    ],
    "primNumberWithExtra": 45,
    "primStringWithExtra": "TEKST",
  },
  "_PI_separator": PrimsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "separator",
    "$id": "ID-4",
    "$typename": "PrimsWithSeparator",
    "primListBooleanSeparator": Array [
      true,
      false,
    ],
    "primListIdentifierSeparator": Array [
      "EenNaam",
      "NogEenNaam",
      "EnNogEen",
    ],
    "primListNumberSeparator": Array [
      56,
      67,
      78,
    ],
    "primListStringSeparator": Array [
      "iets",
      "wat",
    ],
  },
  "_PI_separatorOpt": PrimsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "separatorOpt",
    "$id": "ID-6",
    "$typename": "PrimsWithSeparator",
    "primListBooleanSeparator": Array [
      true,
      false,
    ],
    "primListIdentifierSeparator": Array [],
    "primListNumberSeparator": Array [
      56,
      67,
      78,
    ],
    "primListStringSeparator": Array [],
  },
  "_PI_terminator": PrimsWithTerminator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "terminator",
    "$id": "ID-5",
    "$typename": "PrimsWithTerminator",
    "primListBooleanTerminator": Array [
      true,
    ],
    "primListIdentifierTerminator": Array [
      "EenNaam",
    ],
    "primListNumberTerminator": Array [
      30,
    ],
    "primListStringTerminator": Array [
      "iets",
    ],
  },
  "_PI_terminatorOpt": PrimsWithTerminator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "terminatorOpt",
    "$id": "ID-7",
    "$typename": "PrimsWithTerminator",
    "primListBooleanTerminator": Array [],
    "primListIdentifierTerminator": Array [
      "EenNaam",
    ],
    "primListNumberTerminator": Array [],
    "primListStringTerminator": Array [
      "iets",
    ],
  },
  "name": "someName",
}
`;

exports[`Parser properties of type  Primitive with Keyword projection  1`] = `
PrimsWithKeywordTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": [Circular],
    "_PI_ref": null,
    "name": "",
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "primWith",
  "$id": "ID-10",
  "$typename": "PrimsWithKeywordTest",
  "_PI_primWith": Array [
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 0,
      "$$propertyName": "primWith",
      "$id": "ID-2",
      "$typename": "PrimKeyword",
      "primBoolean": true,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 1,
      "$$propertyName": "primWith",
      "$id": "ID-3",
      "$typename": "PrimKeyword",
      "primBoolean": false,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 2,
      "$$propertyName": "primWith",
      "$id": "ID-4",
      "$typename": "PrimKeyword",
      "primBoolean": true,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 3,
      "$$propertyName": "primWith",
      "$id": "ID-5",
      "$typename": "PrimKeyword",
      "primBoolean": false,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 4,
      "$$propertyName": "primWith",
      "$id": "ID-6",
      "$typename": "PrimKeyword",
      "primBoolean": true,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 5,
      "$$propertyName": "primWith",
      "$id": "ID-7",
      "$typename": "PrimKeyword",
      "primBoolean": false,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 6,
      "$$propertyName": "primWith",
      "$id": "ID-8",
      "$typename": "PrimKeyword",
      "primBoolean": false,
    },
    PrimKeyword {
      "$$owner": [Circular],
      "$$propertyIndex": 7,
      "$$propertyName": "primWith",
      "$id": "ID-9",
      "$typename": "PrimKeyword",
      "primBoolean": true,
    },
  ],
  "name": "myName",
}
`;

exports[`Parser properties of type  Ref  1`] = `
RefsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": [Circular],
    "name": "",
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "ref",
  "$id": "ID-9",
  "$typename": "RefsTest",
  "_PI_directRefs": WithDirectRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directRefs",
    "$id": "ID-2",
    "$typename": "WithDirectRefs",
    "_PI_ref": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "ref",
      "_PI_pathname": Array [
        "someName.otherName.xxx.yyy",
      ],
      "_PI_referred": null,
      "typeName": "RefConcept",
    },
    "_PI_refList": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name1.ff.gg.yuio",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name2",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name3",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name4",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
    ],
  },
  "_PI_indirectRefs": null,
  "_PI_withSeparator": RefsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "withSeparator",
    "$id": "ID-8",
    "$typename": "RefsWithSeparator",
    "_PI_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-5",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-6",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "optList",
        "$id": "ID-7",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
    ],
    "_PI_partList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-3",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-4",
        "$typename": "WithDirectRefs",
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName.otherName.xxx.yyy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1.ff.gg.yuio",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
    ],
  },
  "name": "myName",
}
`;

exports[`Parser properties of type  Ref with Optionals present 1`] = `
RefsTest {
  "$$owner": TestParserModel {
    "$$owner": null,
    "$$propertyIndex": undefined,
    "$$propertyName": "",
    "$id": "ID-1",
    "$typename": "TestParserModel",
    "_PI_lim": null,
    "_PI_parts": null,
    "_PI_prim": null,
    "_PI_primWith": null,
    "_PI_ref": [Circular],
    "name": "",
  },
  "$$propertyIndex": undefined,
  "$$propertyName": "ref",
  "$id": "ID-12",
  "$typename": "RefsTest",
  "_PI_directRefs": WithDirectRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "directRefs",
    "$id": "ID-2",
    "$typename": "WithDirectRefs",
    "_PI_optRef": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optRef",
      "_PI_pathname": Array [
        "nameA",
      ],
      "_PI_referred": null,
      "typeName": "RefConcept",
    },
    "_PI_optRefList": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optRefList",
        "_PI_pathname": Array [
          "nameZ",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optRefList",
        "_PI_pathname": Array [
          "nameY.sdfsgargh.HERA",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "optRefList",
        "_PI_pathname": Array [
          "nameX",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
    ],
    "_PI_ref": PiElementReference {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "ref",
      "_PI_pathname": Array [
        "someName.x34565",
      ],
      "_PI_referred": null,
      "typeName": "RefConcept",
    },
    "_PI_refList": Array [
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name1.d45fgh",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name2",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 2,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name3",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": 3,
        "$$propertyName": "refList",
        "_PI_pathname": Array [
          "name4",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
    ],
  },
  "_PI_indirectRefs": WithSubSubRefs {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "indirectRefs",
    "$id": "ID-8",
    "$typename": "WithSubSubRefs",
    "_PI_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-7",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
    ],
    "_PI_optPart": WithDirectRefs {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "optPart",
      "$id": "ID-4",
      "$typename": "WithDirectRefs",
      "_PI_optRef": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "optRef",
        "_PI_pathname": Array [
          "nameA",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_optRefList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameZ",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameY",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameX",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "_PI_ref": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "ref",
        "_PI_pathname": Array [
          "someName",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_refList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name1",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name2",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name3",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 3,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name4",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
    },
    "_PI_part": WithDirectRefs {
      "$$owner": [Circular],
      "$$propertyIndex": undefined,
      "$$propertyName": "part",
      "$id": "ID-3",
      "$typename": "WithDirectRefs",
      "_PI_optRef": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "optRef",
        "_PI_pathname": Array [
          "nameA",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_optRefList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameZ",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameY.h56",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "optRefList",
          "_PI_pathname": Array [
            "nameX",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
      "_PI_ref": PiElementReference {
        "$$owner": [Circular],
        "$$propertyIndex": undefined,
        "$$propertyName": "ref",
        "_PI_pathname": Array [
          "someName",
        ],
        "_PI_referred": null,
        "typeName": "RefConcept",
      },
      "_PI_refList": Array [
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 0,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name1.WREQWR.gag",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 1,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name2",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 2,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name3.fghy",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": 3,
          "$$propertyName": "refList",
          "_PI_pathname": Array [
            "name4",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
      ],
    },
    "_PI_partList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "partList",
        "$id": "ID-5",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "partList",
        "$id": "ID-6",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
    ],
  },
  "_PI_withSeparator": RefsWithSeparator {
    "$$owner": [Circular],
    "$$propertyIndex": undefined,
    "$$propertyName": "withSeparator",
    "$id": "ID-11",
    "$typename": "RefsWithSeparator",
    "_PI_optList": Array [
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 0,
        "$$propertyName": "optList",
        "$id": "ID-9",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
      WithDirectRefs {
        "$$owner": [Circular],
        "$$propertyIndex": 1,
        "$$propertyName": "optList",
        "$id": "ID-10",
        "$typename": "WithDirectRefs",
        "_PI_optRef": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "optRef",
          "_PI_pathname": Array [
            "nameA",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_optRefList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameZ",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameY",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "optRefList",
            "_PI_pathname": Array [
              "nameX",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
        "_PI_ref": PiElementReference {
          "$$owner": [Circular],
          "$$propertyIndex": undefined,
          "$$propertyName": "ref",
          "_PI_pathname": Array [
            "someName",
          ],
          "_PI_referred": null,
          "typeName": "RefConcept",
        },
        "_PI_refList": Array [
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 0,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name1",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 1,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name2",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 2,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name3",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
          PiElementReference {
            "$$owner": [Circular],
            "$$propertyIndex": 3,
            "$$propertyName": "refList",
            "_PI_pathname": Array [
              "name4",
            ],
            "_PI_referred": null,
            "typeName": "RefConcept",
          },
        ],
      },
    ],
    "_PI_partList": Array [],
  },
  "name": "myName",
}
`;
